--- a/index.html
+++ b/index.html
@@ -222,6 +222,6 @@
         </div>
     </footer>
 
-    <script src="../TrangChu/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
