Update auth button links in index.html

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                 
                 <!-- Mobile Auth Buttons -->
                 <div class="mobile-auth">
-                    <a href="#" class="btn btn-login">Đăng nhập</a>
-                    <a href="#" class="btn btn-signup">Đăng ký</a>
+                    <a href="https://nokorakurenai.github.io/docspace-dangnhap" class="btn btn-login">Đăng nhập</a>
+                    <a href="https://nokorakurenai.github.io/docspace-dangky" class="btn btn-signup">Đăng ký</a>
                 </div>
             </ul>
 
             <!-- Desktop Auth Buttons -->
             <div class="auth-buttons desktop-auth">
-                <a href="#" class="btn btn-login">Đăng nhập</a>
-                <a href="#" class="btn btn-signup">Đăng ký</a>
+                <a href="https://nokorakurenai.github.io/docspace-dangnhap" class="btn btn-login">Đăng nhập</a>
+                <a href="https://nokorakurenai.github.io/docspace-dangky" class="btn btn-signup">Đăng ký</a>
             </div>
         </nav>
     </header>
